from M1 Macbook Air

--- a/text classification Stack Overflow.ipynb
+++ b/text classification Stack Overflow.ipynb
@@ -81,19 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "bc92b2b2",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.DS_Store', 'test', 'stack_overflow_16k.tar.gz', 'README.md', 'train']"
+       "['test', 'stack_overflow_16k.tar.gz', 'README.md', 'train']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "d3afdcc9",
    "metadata": {},
    "outputs": [],
@@ -115,17 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "c8b0fed3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.DS_Store', 'python', 'java', 'csharp', 'javascript']"
+       "['python', 'java', 'csharp', 'javascript']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "70c9a0a7",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "d81d203c",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "['python', 'java', 'csharp', 'javascript']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "d0468497",
    "metadata": {},
    "outputs": [
@@ -175,18 +175,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./stack_overflow_16k/train/python/33.txt\n",
-      "\"return the smallest element value in a list of lists given a list of lists like this :..[[\"\"filea\"\",7],[\"\"fileb\"\",4],[\"\"filec\"\",17],[\"\"filed\"\",15]]...how would you return the first element associated to the smallest value ? in this instance \"\"fileb\"\" since it has the smallest value (4). i'm guessing the shortest way would be using list comprehension .\"\n",
+      "\"why isn't my blank code seeing the condition? my blank code isn't working. i have tried many ways of doing it but i can't seem to make this work. could anyone tell me what's wrong?..if not dead:.   time.sleep(2).   print('').   print('\"\"ok next question.\"\" she looked at a paper in front of her.').   time.sleep(2).   print('\"\"where on earth do they a day with 24 hours and a night with 24 hours?\"\"').   time.sleep(2).if ally:.   print('').   print('\"\"small hint, it starts with a and is a cold desert.\"\"').   print('').   answer = input('which place?:'). else:.   answer = input('which place?:').   if answer == 'antarctica' or answer == 'antarctica':.      time.sleep(2).      print('').      print('she nods. \"\"correct. two more.').   if answer != 'antarctica' and answer != 'antarctica' and ally:.      time.sleep(2).      print('').      print('shaking her head with wide eyes, she looks around carefully.').      time.sleep(2).      print('\"\"the answer is antarctica.\"\" she says, mimicking your voice.').      dead = false.      time.sleep(2).      print(''\"\"i can't do that much, so please try to refrain from getting it wrong.\"\"'').   if answer != 'antarctica' and answer != 'antarctica' and not ally:.      time.sleep(2).      print('').      print('she sighs. '\"\"i'm sorry.\"\"' the fire below comes closer and closer as you fall.').      dead = true...the code just seems to end if i put in a wrong answer, whereas i would like it to see that if the user has an ally, it will give out a different answer, if they don't have an ally they give a different answer etc. .any help would be highly appreciated!\"\n",
       "\n",
-      "./stack_overflow_16k/train/java/302.txt\n",
-      "\"basic blank program questions public class a { //some fields (may not only primitive types) and methods here}..   public class b {// some fields (may not only primitive types) and methods here, may also have a class a reference }...questions are followed :..    public class test{ ..public static void main(string[] args){ ..a a = new a();//1. it will allocate memory for one object of a and a is the reference points to that space? ..arraylist&lt;b&gt; blist = new arraylist&lt;b&gt;(10);//2. it will allocate memory for 10 objects of b?..arraylist&lt;b&gt; blist2 = blist;//3. blist2 reference to the same location as blist?..arraylist&lt;b&gt; blist3 = new arraylist&lt;b&gt;(20);//4. blist3 points to a memory location which can hold 20 objects of b?..blist3 = blist;//5. blist3 now points to the same location as blist, and the space allocated in question 4 will be cleaned by  garbage collector later?..arraylist&lt;b&gt; blist4 = new arraylist&lt;b&gt;(10);.blist4.addall(blist);//6. it is the same as blist4 = blist;? and the memory created in above line will be cleaned by garbage collector later?..method1(blist3);//7.after this function call blist3 will point to memory space created for blista inside the method1? and we can modify the content of that space via blist3..} ..public void method1(arraylist&lt;b&gt; list){.//do something here.arraylist&lt;b&gt; blista = new arraylist&lt;b&gt;();.list = blista;.}..}\"\n",
+      "=========================================================\n",
+      "\"how to generate 4 digit random numbers in blank from 0000 to 9999 i tried the following..int number = threadlocalrandom.current().nextint(1000, 9999 + 1);...but it won't generate 4 digit numbers like 0004,0035 and so on.....i searched for similar questions but none solved, they were different from what i need, if there's already an existing question please let me know...i need no genarate numbers like 1485 and 0180, not only numbers starting with 0.\"\n",
       "\n",
-      "./stack_overflow_16k/train/csharp/1449.txt\n",
-      "\"by design why is it mandatory to specify parameter names when declaring delegate type? why must we specify the parameter name x as follows..public delegate void xxx(int x);...when declaring a delegate type?..for me, the parameter name x is unused so it will be simpler if we can rewrite as follows:..public delegate void xxx(int);...please let me know why the blank designer \"\"forced\"\" us to specify the parameter names...edit1:..is public delegate tresult func&lt;t1,tresult&gt;(t1 arg1) more readable than public delegate tresult func&lt;t1,tresult&gt;(t1) ?\"\n",
+      "=========================================================\n",
+      "\"basic math problems using blank i'm currently learning blank and i wanted to do simple math problems using blank to sharpen my skills. can someone tell me what am i missing in this code? i want the user to enter a specific length, width, and height and then the code will multiply it and then divide by 1728 and then display however it does not function properly. can someone please assist me, thank you..        console.write(\"\"enter your length: \"\");.        int length = new int();.        console.readline();..        console.write(\"\"enter your width: \"\");.        int width = new int();.        console.readline();..        console.write(\"\"enter your height: \"\");.        int height = new int();.        console.readline();..        int totaldims = new int();.        totaldims = length * width * height;.        int cubicfeet = new int();.        cubicfeet = totaldims/1728;..        console.writeline(\"\"your total cubic feet is \"\" + cubicfeet);.        console.readline();\"\n",
       "\n",
-      "./stack_overflow_16k/train/javascript/1808.txt\n",
-      "\"i wanted my image to insertbefore to the \"\"li\"\" but it just inserted after the ul closing tag i wanted my image to insertbefore to the \"\"li\"\" but it just inserted after the ul closing tag..&lt;ul id=\"\"inputid\"\"&gt;.        &lt;li&gt;&lt;input type=\"\"radio\"\" name=\"\"radiogroup\"\" /&gt;a.&lt;/li&gt;.        &lt;li&gt;&lt;input type=\"\"radio\"\" name=\"\"radiogroup\"\" /&gt;b.&lt;/li&gt;.        &lt;li&gt;&lt;input type=\"\"radio\"\" name=\"\"radiogroup\"\" /&gt;c.&lt;/li&gt;.        &lt;li&gt;&lt;input type=\"\"radio\"\" name=\"\"radiogroup\"\" /&gt;d.&lt;/li&gt;.&lt;/ul&gt;.&lt;script&gt;.var img = document.createelement(\"\"img\"\");.    img.setattribute(\"\"id\"\", \"\"imgcheck\"\");.    img.setattribute(\"\"src\"\", \"\"image.jpg\"\");..    var bar = document.queryselector(\"\"ul li\"\");.    document.body.insertbefore(img, bar[0]);.&lt;/script&gt;\"\n",
-      "\n"
+      "=========================================================\n",
+      "\"how can i execute a js function from the top of the stack? i'd like to execute a function from the top of the stack.  that is, any variables defined with \"\"var\"\" should be defined in the global sense.  is this possible?  fn.call(window) doesn't work...&lt;script&gt;.  var foo = \"\"i am top level foo.\"\";..  var fn = function(){.    var foo = \"\"setting foo from in a function\"\";.  }..  fn.call(window);  //doesn't work, var is still set locally in fn..  alert(foo);  //desired effect will alert \"\"setting foo from in a function\"\".&lt;/script&gt;...please note:  i am fully aware that not specifying \"\"var\"\" makes an item a global variable.  the problem is that i can not specify the contents of \"\"fn\"\", it is user-defined, but expected to be run from the top level...i'm willing to use eval if necessary.\"\n",
+      "\n",
+      "=========================================================\n"
      ]
     }
    ],
@@ -194,16 +194,17 @@
     "indexs = np.random.randint(0, 2000, len(train_dir_list))\n",
     "\n",
     "for idx, kind in enumerate(train_dir_list):\n",
-    "  file = os.listdir(os.path.join(train_dir, kind))[indexs[idx]]\n",
-    "  file = os.path.join(os.path.join(train_dir, kind), file)\n",
-    "  print(file)\n",
-    "  with open(file) as f:\n",
-    "    print(f.read())"
+    "    file = os.listdir(os.path.join(train_dir, kind))[indexs[idx]]\n",
+    "    file = os.path.join(os.path.join(train_dir, kind), file)\n",
+    "    with open(file) as f:\n",
+    "        print(f.read())\n",
+    "    print('=========================================================')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "189f894c",
    "metadata": {},
    "outputs": [
@@ -212,47 +213,59 @@
      "output_type": "stream",
      "text": [
       "Found 8000 files belonging to 4 classes.\n",
-      "Using 6400 files for training.\n",
-      "Metal device set to: Apple M1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-06-09 17:01:21.685858: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:305] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2022-06-09 17:01:21.686016: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:271] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n"
+      "Using 6400 files for training.\n"
      ]
     }
    ],
    "source": [
-    "batch_size = 32\n",
-    "seed = 42\n",
-    "\n",
     "raw_train = tf.keras.utils.text_dataset_from_directory(\n",
-    "    'stack_overflow_16k/train',\n",
-    "    batch_size=batch_size, \n",
-    "    validation_split=0.2, \n",
-    "    subset='training', \n",
-    "    seed=seed\n",
-    ")"
+    "    train_dir, batch_size=batch_size, validation_split=0.2, subset='training', seed=seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "9c290164",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['csharp', 'java', 'javascript', 'python']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_train.class_names"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "d1ea87dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'BatchDataset' object has no attribute 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [38]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mraw_train\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshape\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'BatchDataset' object has no attribute 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "ra"
+   ]
   },
   {
    "cell_type": "code",
